--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "iso-639-1": "^2.1.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons": "^3.8.0",
+    "react-lines-ellipsis": "^0.14.1",
+    "react-moment": "^0.9.6",
+    "react-number-format": "^4.3.1",
+    "react-player": "^1.14.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
+    "react-youtube": "^7.9.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
